--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ langchain-community = "^0.3.7"
 pypdf = "^5.1.0"
 langchain-pinecone = "^0.2.0"
 langchain-openai = "^0.2.8"
+pypdf2 = "^3.0.1"
 
 
 [build-system]
