--- a/Backend/pyproject.toml
+++ b/Backend/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.12,<3.13"
-fastapi = "^0.115.5"
+fastapi = {extras = ["standard"], version = "^0.115.7"}
 uvicorn = "^0.32.0"
 langchain = "^0.3.7"
 langchain-community = "^0.3.7"
@@ -15,7 +15,12 @@ pypdf = "^5.1.0"
 langchain-pinecone = "^0.2.0"
 langchain-openai = "^0.2.8"
 pypdf2 = "^3.0.1"
+langchain-google-genai = "^2.0.9"
+langchain-mistralai = "^0.2.5"
 
+
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.29.5"
 
 [build-system]
 requires = ["poetry-core"]
