--- a/Backend/pyproject.toml
+++ b/Backend/pyproject.toml
@@ -17,6 +17,9 @@ langchain-openai = "^0.2.8"
 pypdf2 = "^3.0.1"
 langchain-google-genai = "^2.0.9"
 langchain-mistralai = "^0.2.5"
+motor = "^3.7.0"
+python-jose = {extras = ["cryptography"], version = "^3.3.0"}
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 
 
 [tool.poetry.group.dev.dependencies]
