--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -28,6 +28,7 @@
     "react-hot-toast": "^2.5.1",
     "react-router": "^7.1.5",
     "react-router-dom": "^7.1.5",
+    "react-spinners": "^0.15.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
