--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -26,6 +26,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
+    "react-markdown": "^9.0.3",
     "react-router": "^7.1.5",
     "react-router-dom": "^7.1.5",
     "react-spinners": "^0.15.0",
