--- a/Backend/pyproject.toml
+++ b/Backend/pyproject.toml
@@ -16,10 +16,12 @@ langchain-pinecone = "^0.2.0"
 langchain-openai = "^0.2.8"
 pypdf2 = "^3.0.1"
 langchain-google-genai = "^2.0.9"
-langchain-mistralai = "^0.2.5"
+langchain-mistralai = "^0.2.6"
 motor = "^3.7.0"
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
+crawl4ai = "^0.4.248"
+googlesearch-python = "^1.3.0"
 
 
 [tool.poetry.group.dev.dependencies]
